syntax = "proto3";

package com.makarytskyi.commonmodels.repairing;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message Repairing {
  enum RepairingStatus {
    REPAIRING_STATUS_UNSPECIFIED = 0;
    REPAIRING_STATUS_PENDING = 1;
    REPAIRING_STATUS_IN_PROGRESS = 2;
    REPAIRING_STATUS_COMPLETED = 3;
  }

  string id = 1;
  string car_id = 2;
  google.protobuf.Timestamp date = 3;
  double price = 4;
  RepairingStatus status = 5;
}
